--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                                                 <div class="preview-article-header">
                                                     <h2>
                                                         <a data-action="open-full-post" data-post="project-2"
-                                                           href="#">Pelaksaan Program Rehabilitasi Sosial</a>
+                                                           href="https://mediaindonesia.com/lima/kemensos-pelaksaan-program-rehabilitasi-sosial">Pelaksaan Program Rehabilitasi Sosial</a>
                                                     </h2>
                                                 </div>
                                                 <div class="preview-article-text">
@@ -187,7 +187,7 @@
 
                                                 <a class="tmp-class open-full-post" data-action="open-full-post"
                                                    data-post="project-2"
-                                                   href="#"><span>LIHAT</span></a>
+                                                   href="https://mediaindonesia.com/lima/kemensos-pelaksaan-program-rehabilitasi-sosial"><span>LIHAT</span></a>
                                             </article>
                                         </div>
                                     </div>
@@ -231,7 +231,7 @@
             <div class="right-side">
                 <div class="side-content">
                     <p class="copyright">
-                        © 2023 LIMA, Mediaindonesia.com</p>
+                        © 2024 LIMA, Mediaindonesia.com</p>
                 </div>
             </div>
         </div>
