--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                                 <div class="preview-article-header">
                                                     <h2>
                                                         <a data-action="open-full-post" data-post="project-1"
-                                                           href="#">Timbunan Sampah DKI Jakarta Masih Tinggi</a>
+                                                           href="https://devel.mediaindonesia.com/lima/timbunan-sampah-dki-jakarta-masih-tinggi">Timbunan Sampah DKI Jakarta Masih Tinggi</a>
                                                     </h2>
                                                 </div>
                                                 <div class="preview-article-text">
@@ -150,7 +150,7 @@
 
                                                 <a class="tmp-class open-full-post" data-action="open-full-post"
                                                    data-post="project-1"
-                                                   href="#"><span>LIHAT</span></a>
+                                                   href="https://devel.mediaindonesia.com/lima/timbunan-sampah-dki-jakarta-masih-tinggi"><span>LIHAT</span></a>
                                             </article>
                                         </div>
                                     </div>
